my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EATYPE/EATYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EATYPE.dml:8:1: error EATYPE: attribute type undefined: a
